data/forge_javadoc/1.12.2/processed/net_minecraftforge_fml_client_config_DummyConfigElement.md
# DummyConfigElement

**Inheritance:** java.lang.Object → net.minecraftforge.fml.client.config.DummyConfigElement

## Class signature

```java
public class DummyConfigElement extends java.lang.Object implements IConfigElement
```

## Constructors

- `DummyConfigElement(java.lang.String name, java.lang.Object defaultValue, ConfigGuiType type, java.lang.String langKey)`
- `DummyConfigElement(java.lang.String name, java.lang.Object defaultValue, ConfigGuiType type, java.lang.String langKey, java.lang.Object minValue, java.lang.Object maxValue)`
- `DummyConfigElement(java.lang.String name, java.lang.Object defaultValue, ConfigGuiType type, java.lang.String langKey, java.util.regex.Pattern validStringPattern)`
- `DummyConfigElement(java.lang.String name, java.lang.Object defaultValue, ConfigGuiType type, java.lang.String langKey, java.lang.String[] validValues)`
- `DummyConfigElement(java.lang.String name, java.lang.Object defaultValue, ConfigGuiType type, java.lang.String langKey, java.lang.String[] validValues, java.util.regex.Pattern validStringPattern, java.lang.Object minValue, java.lang.Object maxValue)`
- `DummyConfigElement(java.lang.String name, java.lang.Object defaultValue, ConfigGuiType type, java.lang.String langKey, java.lang.String[] validValues, java.lang.String[] validValuesDisplay)`
- `DummyConfigElement(java.lang.String name, java.lang.Object defaultValue, ConfigGuiType type, java.lang.String langKey, java.lang.String[] validValues, java.lang.String[] validValuesDisplay, java.util.regex.Pattern validStringPattern, java.lang.Object minValue, java.lang.Object maxValue)`

## Methods

- `java.lang.Object get()` — [Property] Gets this property value.
- `java.lang.Class<? extends GuiEditArrayEntries.IArrayEntry> getArrayEntryClass()` — This method returns a class that implements GuiEditArrayEntries.IArrayEntry .
- `java.util.List<IConfigElement> getChildElements()` — [Category] Gets this category's child categories/properties.
- `java.lang.String getComment()` — [Property, Category] Gets the comment for this object.
- `java.lang.Class<? extends GuiConfigEntries.IConfigEntry> getConfigEntryClass()` — This method returns a class that implements GuiConfigEntries.IConfigEntry or null.
- `java.lang.Object getDefault()` — [Property] Gets this property's default value.
- `java.lang.Object[] getDefaults()` — [Property] Gets this property's default values.
- `java.lang.String getLanguageKey()` — [Property, Category] Gets a language key for localization of config GUI entry names.
- `java.lang.Object[] getList()` — [Property] Gets this property value as a list.
- `int getMaxListLength()` — [Property] Gets the max length of this list property, or -1 if the length is unlimited.
- `java.lang.Object getMaxValue()` — [Property] Gets this property's maximum value.
- `java.lang.Object getMinValue()` — [Property] Gets this property's minimum value.
- `java.lang.String getName()` — [Property, Category] Gets the name of this object.
- `java.lang.String getQualifiedName()` — [Category] Gets the qualified name of this object.
- `ConfigGuiType getType()` — [Property, Category] Gets the ConfigGuiType value corresponding to the type of this property object, or CONFIG_CATEGORY if this is a category object.
- `java.util.regex.Pattern getValidationPattern()` — [Property] Gets a Pattern object used in String property input validation.
- `java.lang.String[] getValidValues()` — [Property] Gets a String array of valid values for this property.
- `java.lang.String[] getValidValuesDisplay()` — [Property] Gets a String array of the versions of this property's valid values that will display in the config GUI.
- `boolean isDefault()` — [Property] Is this property value equal to the default value?
- `boolean isList()` — [Property] Is this property object a list?
- `boolean isListLengthFixed()` — [Property] Does this list property have to remain a fixed length?
- `boolean isProperty()` — [Property, Category] Is this object a property object?
- `boolean requiresMcRestart()` — [Property, Category] Whether or not this element requires Minecraft to be restarted when changed.
- `boolean requiresWorldRestart()` — [Property, Category] Whether or not this element is safe to modify while a world is running.
- `void set(java.lang.Object value)` — [Property] Sets this property's value.
- `void set(java.lang.Object[] aVal)` — [Property] Sets this property's value to the specified array.
- `IConfigElement setArrayEntryClass(java.lang.Class<? extends GuiEditArrayEntries.IArrayEntry> clazz)`
- `IConfigElement setConfigEntryClass(java.lang.Class<? extends GuiConfigEntries.IConfigEntry> clazz)`
- `DummyConfigElement setCustomListEntryClass(java.lang.Class<? extends GuiConfigEntries.IConfigEntry> clazz)`
- `IConfigElement setRequiresMcRestart(boolean requiresMcRestart)`
- `IConfigElement setRequiresWorldRestart(boolean requiresWorldRestart)`
- `void setToDefault()` — [Property] Sets this property's value to the default value.
- `boolean showInGui()` — [Property, Category] Whether or not this element should be allowed to show on config GUIs.

## Fields

- `protected java.lang.Class<? extends GuiEditArrayEntries.IArrayEntry> arrayEntryClass`
- `protected java.util.List<IConfigElement> childElements`
- `protected java.lang.Class<? extends GuiConfigEntries.IConfigEntry> configEntryClass`
- `protected java.lang.Object defaultValue`
- `protected java.lang.Object[] defaultValues`
- `protected boolean isList`
- `protected boolean isListFixedLength`
- `protected boolean isProperty`
- `protected java.lang.String langKey`
- `protected int maxListLength`
- `protected java.lang.Object maxValue`
- `protected java.lang.Object minValue`
- `protected java.lang.String name`
- `protected boolean requiresMcRestart`
- `protected boolean requiresWorldRestart`
- `protected ConfigGuiType type`
- `protected java.util.regex.Pattern validStringPattern`
- `protected java.lang.String[] validValues`
- `protected java.lang.String[] validValuesDisplay`
- `protected java.lang.Object value`
- `protected java.lang.Object[] values`